Playtesting...
Multiple-choice modifiers
Rolling one is always a success (+1)
Collapsable groups that can be ordered (for groups of the same unit)
Bigger notepad font
Notepad on top (closer to unit list)